合同查看无法滚动

--- a/src/views/contract/y-contract/view.html
+++ b/src/views/contract/y-contract/view.html
@@ -5,6 +5,10 @@
          .wrapguding{display:none;}
          .zafeitit{color:#FFB800;font-weight:500;}
          .zisyajin{display: none;}
+         .form-wrapper{height: 770px;}
+         @media screen and (max-width: 1366px) {
+            .form-wrapper{height: 460px;}
+         }
      </style>
   <script type="text/html" template >
     {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex)}}
