--- a/src/views/user/reg.html
+++ b/src/views/user/reg.html
@@ -1,9 +1,7 @@
-
 <script src="../../../Scripts/jquery-1.10.2.js"></script>
 <script src="../../../Scripts/Common/md5.js"></script>
-
 <style>
-  #LAY_app{background: url(../../Images/bj.png) repeat left top;}
+    #LAY_app{background: url(../../Images/bj.png) repeat left top;}
   .index-filed-body {
     background: url(../../Images/index-filed-newImg.png) repeat left top;
     background-size: 100% 100%;
@@ -94,7 +92,7 @@ img {
 }
 </style>
 <script type="text/html" template>
-  <link rel="stylesheet" href="{{ layui.setter.base }}style/login.css?v={{ layui.admin.v }}-1" media="all">
+    <link rel="stylesheet" href="{{ layui.setter.base }}style/login.css?v={{ layui.admin.v }}-1" media="all">
 </script>
 <div class="reg-body">
     <div class="index-filed-body" style="display: block;">
@@ -108,92 +106,94 @@ img {
                 <img src="../../Images/9105803a8767d46f2b4b5d0514bd224.jpg">
             </span>
         </div>
-      </div>
-      <div class="layadmin-user-login layadmin-user-display-show" id="LAY-user-login" style="display: none;">
+    </div>
+    <div class="layadmin-user-login layadmin-user-display-show" id="LAY-user-login" style="display: none;">
         <div class="layadmin-user-login-main">
-          <div class="layadmin-user-login-box layadmin-user-login-header">
-            <h2>飞鸟管家</h2>
-            <p>此为体验版如需正式开通或者体验APP请联系客服</p>
-          </div>
-          <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
-            <div class="layui-form-item">
-              <label class="layadmin-user-login-icon layui-icon layui-icon-cellphone" for="LAY-user-login-cellphone"></label>
-              <input type="text" name="cellphone" id="LAY-user-login-cellphone" lay-verify="phone" placeholder="手机" class="layui-input">
+            <div class="layadmin-user-login-box layadmin-user-login-header">
+                <h2>飞鸟管家</h2>
+                <p>此为体验版如需正式开通或者体验APP请联系客服</p>
             </div>
-            <div class="layui-form-item">
-              <div class="layui-row">
-                <div class="layui-col-xs7">
-                  <label class="layadmin-user-login-icon layui-icon layui-icon-vercode" for="LAY-user-login-vercode"></label>
-                  <input type="text" name="vercode" id="LAY-user-login-vercode" lay-verify="required" placeholder="验证码" class="layui-input">
+            <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
+                <div class="layui-form-item">
+                    <label class="layadmin-user-login-icon layui-icon layui-icon-cellphone" for="LAY-user-login-cellphone"></label>
+                    <input type="text" name="cellphone" id="LAY-user-login-cellphone" lay-verify="phone" placeholder="手机" class="layui-input">
                 </div>
-                <div class="layui-col-xs5">
-                  <div style="margin-left: 10px;">
-                    <button type="button" class="layui-btn layui-btn-primary layui-btn-fluid" id="LAY-user-getsmscode">获取验证码</button>
-                    <span class="time" id="timeout"><i>60</i>秒重新获取</span>
-                  </div>
+                <div class="layui-form-item">
+                    <div class="layui-row">
+                        <div class="layui-col-xs7">
+                            <label class="layadmin-user-login-icon layui-icon layui-icon-vercode" for="LAY-user-login-vercode"></label>
+                            <input type="text" name="vercode" id="LAY-user-login-vercode" lay-verify="required" placeholder="验证码" class="layui-input">
+                        </div>
+                        <div class="layui-col-xs5">
+                            <div style="margin-left: 10px;">
+                                <button type="button" class="layui-btn layui-btn-primary layui-btn-fluid" id="LAY-user-getsmscode">获取验证码</button>
+                                <span class="time" id="timeout"><i>60</i>秒重新获取</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
+                <div class="layui-form-item">
+                    <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-password"></label>
+                    <input type="password" name="password" id="LAY-user-login-password" lay-verify="required" placeholder="密码" class="layui-input">
+                </div>
+                <div class="layui-form-item">
+                    <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-repass"></label>
+                    <input type="password" name="repass" id="LAY-user-login-repass" lay-verify="required" placeholder="确认密码" class="layui-input">
+                </div>
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="LAY-user-reg-submit">注 册</button>
+                </div>
+                <div class="layui-trans layui-form-item layadmin-user-login-other">
+                    <a lay-href="/user/login" class="layadmin-user-jump-change layadmin-link layui-hide-xs">用已有帐号登入</a>
+                    <a lay-href="/user/login" class="layadmin-user-jump-change layadmin-link layui-hide-sm layui-show-xs-inline-block">登入</a>
+                </div>
             </div>
-            <div class="layui-form-item">
-              <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-password"></label>
-              <input type="password" name="password" id="LAY-user-login-password" lay-verify="required" placeholder="密码" class="layui-input">
-            </div>
-            <div class="layui-form-item">
-              <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-repass"></label>
-              <input type="password" name="repass" id="LAY-user-login-repass" lay-verify="required" placeholder="确认密码" class="layui-input">
-            </div>
-          
-            
-            <div class="layui-form-item">
-              <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="LAY-user-reg-submit">注 册</button>
-            </div>
-            <div class="layui-trans layui-form-item layadmin-user-login-other">
-              <a lay-href="/user/login" class="layadmin-user-jump-change layadmin-link layui-hide-xs">用已有帐号登入</a>
-        
-              <a lay-href="/user/login" class="layadmin-user-jump-change layadmin-link layui-hide-sm layui-show-xs-inline-block">登入</a>
-            </div>
-          </div>
         </div>
-        
-        
-      
-      </div>
+    </div>
 </div>
-
-
 <script>
-layui.use(['admin', 'form', 'user'], function(){
-  var $ = layui.$
-  ,setter = layui.setter
-  ,admin = layui.admin
-  ,form = layui.form
-  ,router = layui.router();
-  form.render();
+layui.use(['admin', 'form', 'user'], function() {
+    var $ = layui.$,
+        setter = layui.setter,
+        admin = layui.admin,
+        form = layui.form,
+        router = layui.router();
+    form.render();
 
-  //提交
-  form.on('submit(LAY-user-reg-submit)', function(obj){
-    var field = obj.field;
-    field.yzm=field.vercode;
-    field.Mobile=field.cellphone;
-    //确认密码
-    if(field.password !== field.repass){
-      return layer.msg('两次密码输入不一致');
-    }
-    $('button[lay-submit]').prop('disabled', true);
-    field.password=hex_md5(field.password).toUpperCase();
-    var baseurl = setter.baseurl;
-    
-    //请求接口
-    admin.req({
-      url: baseurl+'api/Sysuser/register' //实际使用请改成服务端真实接口
-      ,data: field
-      ,type: "POST"
-      ,done: function(res){        
-        location.hash = '/user/login'; //跳转到登入页
-      }
+    //提交
+    form.on('submit(LAY-user-reg-submit)', function(obj) {
+        var field = obj.field;
+        field.yzm = field.vercode;
+        field.Mobile = field.cellphone;
+        //确认密码
+        if (field.password !== field.repass) {
+            return layer.msg('两次密码输入不一致');
+        }
+        $('button[lay-submit]').prop('disabled', true);
+        field.password = hex_md5(field.password).toUpperCase();
+        var baseurl = setter.baseurl;
+
+        //请求接口
+        admin.req({
+            url: baseurl + 'api/Sysuser/register' //实际使用请改成服务端真实接口
+                ,
+            data: field,
+            type: "POST",
+            done: function(res) {
+                if (res.code === 0) {
+                    location.hash = '/user/login'; //跳转到登入页
+                } else {
+                    layer.msg(res.Message);
+                    $('button[lay-submit]').prop('disabled', false);
+                }
+            },
+            error: function(){
+              layer.msg('注册失败');
+              $('button[lay-submit]').prop('disabled', false);
+            }
+        });
+
+        return false;
     });
-    
-    return false;
-  });
 });
 </script>
