--- a/src/views/msystem/sysuser/edit.html
+++ b/src/views/msystem/sysuser/edit.html
@@ -47,7 +47,7 @@
                 });  
                 //初始化赋值
                 form.val("formuser", {
-                "range": realdata.range 
+                "range": String(realdata.range)
                })
                 form.render('');
                 
