--- a/src/views/house/z-house/index.html
+++ b/src/views/house/z-house/index.html
@@ -1,7 +1,15 @@
 ﻿<title>合租房源</title>
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <script src="../../../../Scripts/jquery-1.10.2.js"></script>
-
+<style>
+    .layui-content{
+        height: calc(100% - 30px);
+    }
+    #view{
+        height: calc(100% - 100px);
+        overflow: auto;
+    }
+</style>
 <body style="background-color:#ffffff;">
         <script id="demo" type="text/html">
             <div class="m-comtent1">
