--- a/src/views/bill/y-bill/edit.html
+++ b/src/views/bill/y-bill/edit.html
@@ -37,14 +37,15 @@
         });
         var laydate = layui.laydate;
         laydate.render({
-         elem: '#BeginTime' //指定元素
+         elem: '#BeginTime1' //指定元素
                     });
         laydate.render({
-         elem: '#EndTime' //指定元素
+         elem: '#EndTime1' //指定元素
                     });  
                     laydate.render({
-         elem: '#ShouldReceive' //指定元素
+         elem: '#ShouldReceive1' //指定元素
         });
+        $("#Remark").val(data.numberData.Remark);
         form.render('');
     var url="api/Bill/billlist";
     var clos=[[ //表头
@@ -228,19 +229,25 @@ function ns(value){
                                     <div class="layui-inline">
                                         <label class="layui-form-label" style="text-align:left;width:auto;">账单周期</label>
                                         <div class="layui-input-inline" style="width: 122px;">
-                                            <input type="text" name="BeginTime" id="BeginTime" autocomplete="off" class="layui-input" value="{{util.toDateString(d.BeginTime, 'yyyy-MM-dd')}}">
+                                            <input type="text" name="BeginTime" id="BeginTime1" autocomplete="off" class="layui-input" value="{{util.toDateString(d.BeginTime, 'yyyy-MM-dd')}}">
                                         </div>
                                         <div class="layui-form-mid">到</div>
                                         <div class="layui-input-inline" style="width:122px;">
-                                            <input type="text" name="EndTime" id="EndTime" autocomplete="off" class="layui-input" value="{{util.toDateString(d.EndTime, 'yyyy-MM-dd')}}">
+                                            <input type="text" name="EndTime" id="EndTime1" autocomplete="off" class="layui-input" value="{{util.toDateString(d.EndTime, 'yyyy-MM-dd')}}">
                                         </div>
                                     </div>
                                     <div class="layui-inline">
                                         <label class="layui-form-label">应付款时间</label>
                                         <div class="layui-input-inline">
-                                            <input type="text" name="ShouldReceive"  autocomplete="off" class="layui-input gray" value="{{d.ShouldReceive}}" disabled>
+                                            <input type="text" name="ShouldReceive" id="ShouldReceive1"  autocomplete="off" class="layui-input" value="{{d.ShouldReceive}}" >
                                         </div>
                                     </div>   
+                                </div>
+                                <div class="layui-form-item">
+                                  <label class="layui-form-label">备注</label>
+                                  <div class="layui-input-inline">
+                                        <textarea name="Remark" id="Remark" placeholder="请输入内容" value="" class="layui-textarea"></textarea>
+                                   </div> 
                                 </div>            
                               </div>
                               <div class="layui-tab layui-tab-card" style="margin-top:0;">
