--- a/src/views/bill/y-bill/fukuan.html
+++ b/src/views/bill/y-bill/fukuan.html
@@ -72,6 +72,7 @@
                               <div class="layui-colla-content layui-show">
                                 <span class="yspan">收款人:{{doc.ns(d.payee)}}</span>
                                 <span class="yspan">银行：{{doc.ns(d.accounts)}}</span>
+                                <span class="yspan">支行{{doc.ns(d.accounts)}}</span>
                                 <span class="yspan">账号:{{doc.ns(d.bank)}}</span>
                               </div>
                             </div>
